Simplified tasks logic
